--- a/Products-Core/packages.config
+++ b/Products-Core/packages.config
@@ -9,4 +9,5 @@
   <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net45" />
   <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net45" />
   <package id="Simple.Data.SqlCompact40" version="0.19.0.0" targetFramework="net45" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
 </packages>
