--- a/Store-Core/packages.config
+++ b/Store-Core/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="Machine.Specifications" version="0.9.1" targetFramework="net45" />
   <package id="Machine.Specifications.Should" version="0.7.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="paramore.brighter.commandprocessor" version="4.0.215" targetFramework="net45" />
+  <package id="Polly" version="2.2.1" targetFramework="net45" />
   <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net45" />
   <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net45" />
   <package id="Simple.Data.SqlCompact40" version="0.19.0.0" targetFramework="net45" />
