--- a/Store-API/App.config
+++ b/Store-API/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <section name="storeServer" type="Store_API.Adapters.Configuration.StoreServerConfiguration, Store-API" allowLocation="true" allowDefinition="Everywhere" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+     <section name="rmqMessagingGateway" type="paramore.brighter.commandprocessor.messaginggateway.rmq.MessagingGatewayConfiguration.RMQMessagingGatewayConfigurationSection, paramore.brighter.commandprocessor.messaginggateway.rmq" allowLocation="true" allowDefinition="Everywhere" />
   </configSections>
   <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -28,6 +29,10 @@
   <storeServer>
     <address uri="http://localhost:3300/" />
   </storeServer>
+  <rmqMessagingGateway>
+    <amqpUri uri="amqp://guest:guest@localhost:5672/%2f" />
+    <exchange name="paramore.brighter.exchange" />
+  </rmqMessagingGateway>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
